# dremio_optimizer_agent

./: .env.example  .gitignore  DREMIO_CLOUD_API_COMPLETE.md  QUICKSTART.md  README.md  notes.txt  pyproject.toml  test_connection.py
documentation/: DATA_COLLECTION_GUIDE.md  DREMIO_CLOUD_SETUP.md  PHASE1_COMPLETE.md  PHASE1_UPDATED.md  README.md  SETUP_GUIDE.md  SSL_FIX_COMPLETE.md
planning/: PHASE_1_FOUNDATION.md  PHASE_2_ANALYSIS_ENGINE.md  PHASE_3_AI_AGENT.md  PHASE_4_MEASUREMENT.md  PHASE_5_REST_API.md  PHASE_6_OBSERVABILITY.md  PHASE_7_TESTING.md  PROJECT_ROADMAP.md  README.md
scripts/: setup_db.py  test_collection.py
src/clients/: dremio_client.py
src/config/: settings.py
src/data/collectors/: dremio_collector.py
src/data/loaders/: base_loader.py  metadata_loader.py  metrics_loader.py  profile_loader.py  query_loader.py  reflection_metadata_loader.py  storage_loader.py  workload_loader.py
src/database/: connection.py  models.py
src/database/repositories/: base_repository.py  baseline_repository.py  profile_repository.py  query_repository.py  recommendation_repository.py
